Fixed hr alignment

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -4633,7 +4633,7 @@ a:focus {
   color: #222; }
 
 hr {
-  height: 1px;
+  height: 0;
   border: 0;
   margin: 1em 0;
   clear: both;
@@ -4648,11 +4648,11 @@ article .entry-content {
 */
 img.alignright {
   float: right;
-  margin: 6px 0 0.5em 0.5em; }
+  margin: 0 0 1em 1em; }
 
 img.alignleft {
   float: left;
-  margin: 6px 0.5em 0.5em 0; }
+  margin: 0 1em 1em 0; }
 
 img.aligncenter {
   display: block;
